@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.program.yt-setup" name="Youtube Setup" version="1.0.1" provider-name="Twilight0">
+<addon id="plugin.program.yt-setup" name="Youtube Setup" version="1.1.0" provider-name="Twilight0">
     <requires>
         <import addon="xbmc.python" version="2.24.0"/>
         <import addon="plugin.video.youtube" version="5.4.0"/>
@@ -19,6 +19,14 @@
         <website>https://twitter.com/TwilightZer0</website>
         <source>https://github.com/Twilight0/plugin.program.yt-setup</source>
         <news>
+[B]+ 1.1.0[/B] ~ (25-09-2017)
+- Added support for Ubuntu's pastebin
+- Added optional route call method for post-5.4.3 versions of youtube addon
+- Simplified file detection method
+- Added strip method for new lines at the end of files
+- Examples are now using Windows end-of-line
+- Cosmetics
+
 [B]+ 1.0.1[/B] ~ (07-09-2017)
 - Added substitute argument for users that do not enter pastebin's &amp; debian's raw addresses
 - Added option for disabling youtube's setup wizard
