@@ -1,4 +1,3 @@
-true
 123456789012-abcdefghijklmnopqrstuvwxyz123456.apps.googleusercontent.com
 abcdefghijklmnopqrstuvwxyz12345678901234567890123456
 abcdefghijkl-mnopqrstuvw
