@@ -1,5 +1,13 @@
+[B]+ 1.1.0[/B] ~ (25-09-2017)
+- Added support for Ubuntu's pastebin
+- Added optional route call method for post-5.4.3 versions of youtube addon
+- Simplified file detection method
+- Added strip method for new lines at the end of files
+- Examples are now using Windows end-of-line
+- Cosmetics
+
 [B]+ 1.0.1[/B] ~ (07-09-2017)
-- Added substitute argument for users that do not enter pastebin's &amp; debian's raw addresses
+- Added substitute argument for users that do not enter pastebin's & debian's raw addresses
 - Added option for disabling youtube's setup wizard
 
 [B]+ 1.0.0[/B] ~ (04-09-2017)
